syntax = "proto3";

package yandex.cloud.priv.billing.v1alpha1;

import "google/api/annotations.proto";

import "yandex/cloud/priv/billing/v1alpha1/transaction.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/billing/v1alpha1/private;billing";

service PrivateTransactionsService {
  rpc GetTransaction (GetTransactionPrivateRequest) returns (Transaction) {
    option (google.api.http) = { get: "/billing/v1alpha1/private/transactions/{transaction_id}" };
  }
}

message GetTransactionPrivateRequest {
  string transaction_id = 1;
}
