syntax = "proto3";

package yandex.cloud.priv.datatransfer.console.v1;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/console;tm_console_server";

enum LinkType {
    LINK_TYPE_UNSPECIFIED = 0;
    MYSQL = 1;
    POSTGRES = 2;
    CLICKHOUSE = 3;
    EXTERNAL = 4;
    MONGO = 5;
}
message CloudLink {
    string cluster_id = 1;
    string folder_id = 2;
}
message ExternalLink {
    string link = 1;
    map<string,string> props = 2;
}
message Link {
    LinkType type = 1;
    oneof link {
        CloudLink cloud = 2;
        ExternalLink external = 3;
    }
}
message FormResponse {
    enum FormItemType {
        FORM_ITEM_TYPE_UNSPECIFIED = 0;
        STRING = 1;
        INT64 = 2;
        OBJECT = 3;
        ARRAY = 4;
        SECRET = 5;
        BOOL = 6;
        ENUM = 7;
        NUMBER = 8;
    }
    message ViewTableCell {
        string label = 1;
        string property = 2;
    }
    message ViewSpec {
        string label = 1;
        string help = 2;
        string type = 3;
        bool disabled = 4;
        repeated ViewTableCell table = 5;
        repeated string order = 6;
        Link link = 7;
        string item_label = 8;
    }
    message FormItem {
        ViewSpec view_spec = 1;
        bool required = 2;
        map<string,FormItem> properties = 4;
        string value = 6;
        FormItemType type = 7;
        repeated string enum = 10;
        map<string,string> description = 11;
        FormItem items = 12;
        double minimum = 13;
        double maximum = 14;
    }
    string form_root = 2;
    map<string,FormItem> result_spec = 3;
}
message JsonProxy {
    string json = 1;
}
